# wfap-solution

./: .gitattributes  .gitignore  AUTHENTICATION_TEST_GUIDE.md  EXAMPLE_INPUTS.md  INSTALL.md  README.md  SIGNATURE_LOGGING_GUIDE.md  auth-config.py  auth_config.py  pyproject.toml  requirements.txt  secrets_manager.py  shared_keys.py  shared_secrets.json  signature_utils.py  start_servers.sh  test_authentication.py
boa_agent/: .env  __init__.py  __main__.py  agent.py  agent_executor.py  pyproject.toml
broker_agent/: __init__.py  __main__.py  broker_executor.py  pyproject.toml
chase_bank/: __init__.py  __main__.py  agent.py  agent_executor.py  pyproject.toml
company_agent/: __init__.py  __main__.py  agent.py  company_agent_state.json  pyproject.toml
protocols/: __init__.py  intent.py  jwt.py  response.py
rogue_agent/: __main__.py  agent.py  agent_executor.py  company_agent_state.json  pyproject.toml
wells_fargo_agent/: __init__.py  __main__.py  agent.py  agent_executor.py  pyproject.toml
